# corpus-annotation-graph-builder

./: .gitignore  .gitlab-ci.yml  CITATION.cff  Dockerfile  ETL_Model.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
cag/: MANIFETS.in  __init__.py  cli.py  cookiecutter.json
cag/framework/: __init__.py  component.py
cag/graph_elements/: base_graph.py  nodes.py  relations.py
cag/graph_framework/: __init__.py
cag/utils/: config.py  timer.py  utils.py
cag/view_wrapper/: arango_analyzer.py  link.py  view.py
cag/{{cookiecutter.project_slug}}/: HISTORY.rst  docker-compose.yml  requirements.txt
configs/: annotator.toml
docs/: CNAME  Makefile  index.html  make.bat
docs/source/: conf.py  index.rst
examples/: 0_download_process_data.ipynb  1_create_graph.ipynb  2_annotate_graph.ipynb  analyzer_example.ipynb  annotation_example.py  example.html  graph_creation_example.py  requirements.txt  view_creation_example.py
graph_framework/: __init__.py  requirements.txt  setup.py
graph_framework/components/: component.py
graph_framework/graph/: base_graph.py  nodes.py  relations.py
graph_framework/utils/: config.py  utils.py
graph_framework/view_wrapper/: arango_analyzer.py  link.py  test.py  view.py
graph_framework/views/: arango_analyzer.py  link.py  view.py
tests/: __init__.py  test_24-generate-visualizations-of-the-graph.py  test_graph_creator.py  test_nodes.py  test_view.py  text_db_fixture.py
tests/test_analyzers/: test_analyzers.py
tests/test_annotators/: test_annotator_querying.py
tests/test_graph_creator/: __init__.py  test_improve _edge_definitions.py  test_improve_edge_definitions.py  (+3 more)
(+165 files in other folders)
